# FlapPyBird

./: .flake8  .gitignore  .pre-commit-config.yaml  .replit  Makefile  Pipfile  README.md  README.txt  RL_agents.py  RL_flappy.py  RL_train.py  algorithm.txt  flappy.py  flappybird.apk  index.html  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yaml
FlappyBirdClone-master/: flappy.py
assets/sprites/ps/: furymode.psd  particles.psd
source/: featureExtractors.py  flappy.py  game.py  learning.py  learningAgents.py  qlearningAgents.py  setup.py  util.py
src/: RFB.py  constants.py  flappy.py  flappyEnv.py  flappyEnv2.py  images.py  utils.py
src/ai/: bird.py  game_observation.py  game_result.py  genetic_algorithm.py  model.py  selection.py
src/ai/entities/: __init__.py  background.py  entity.py  player.py
src/ai/utils/: __init__.py  game_config.py  utils.py  window.py
src/entities/: background.py  entity.py  floor.py  game_over.py  pipe.py  player.py  score.py  welcome_message.py
src/models/: A2Helpers.py  ActorCritic.py  DQN.py  model.py
src/models/DynaQ/: dynaq.py
src/models/FA/: QLearningOLD.py
src/models/FA/DynaQ/: dynaq.py
src/models/QLearning/: A2helpers.py  qlearning.py
src/models/featurizer/: tile_coding.py  tile_coding_6d.py
src/sprites/: __init__.py  background.py  floor.py  game_over.py  pipe.py  player.py  score.py  sprite.py  welcome_message.py
src/utils/: __init__.py  hit_mask.py  images.py  sounds.py  utils.py  window.py
